--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
         </div>
         <div class="buttons">
-            <button class="btn" onClick="winnerOne()">Winner-1</button>
-            <button class="btn" onClick="winnerTwo()">Winner-2</button>
-            <button class="btn" onClick="winnerThree()">Winner-3</button>
+            <button class="btn" onClick="winnerOne()">Winner-1🏆</button>
+            <button class="btn" onClick="winnerTwo()">Winner-2🏆</button>
+            <button class="btn" onClick="winnerThree()">Winner-3🏆</button>
         </div>
     </div>
     <script src="script.js"></script>
